envoy/production/front-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            virtual_hosts:
            - name: backend
              domains:
              - "kamericloud.de"
              routes:
              - match:
                  prefix: "/"      
                redirect:
                  path_redirect: "/"
                  https_redirect: true                                                           
          http_filters:
          - name: envoy.router
            config: {}      
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:             
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "kamericloud.de"
              routes:
              - match:
                  prefix: "/api/auth/"
                route:
                  cluster: authservice                       
              - match:
                  prefix: "/"
                route:
                  cluster: frontend                                                                                         
          http_filters:
          - name: envoy.router
            config: {}    
      tls_context:
        common_tls_context:
          tls_certificates:
            - certificate_chain:
                filename: "/etc/fullchain.pem"
              private_key:
                filename: "/etc/privkey.pem"

  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8883
    listener_filters:
      - name: "envoy.listener.tls_inspector"
        config: {}    
    filter_chains: 
    - filter_chain_match:
        transport_protocol: tls
        server_names:
          - kamericloud.de          
    - filters:
      - name: envoy.tcp_proxy
        config:
          stat_prefix: ingress_tcp
          cluster: hivemq
      tls_context:
        common_tls_context:
          tls_certificates:
            - certificate_chain:
                filename: "/etc/fullchain.pem"
              private_key:
                filename: "/etc/privkey.pem"
 
# vorsicht
  clusters:
# vorsicht
  - name: hivemq
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: hivemq
        port_value: 1883 

  - name: authservice
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http_protocol_options: {}
    hosts:
    - socket_address:
        address: authservice
        port_value: 5001 

  - name: frontend
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http_protocol_options: {}
    hosts:
    - socket_address:
        address: frontend
        port_value: 80                 
          
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
